Revert "update pom, add jib-maven-plugin, jvm args"
This reverts commit a021d1cd71161386e4e2a45200a5e45dbe0cd7b0.