@@ -499,20 +499,6 @@
                         <ports>
                             <port>8777</port>
                         </ports>
-                        <jvmFlags>
-                            <jvmFlag>-Xmx8048m</jvmFlag>
-                            <jvmFlag>-Xss1024m</jvmFlag>
-                            <jvmFlag>-XX:NewSize=64m</jvmFlag>
-                            <jvmFlag>-XX:MaxNewSize=128m</jvmFlag>
-                            <jvmFlag>-Dfile.encoding=UTF-8</jvmFlag>
-                            <jvmFlag>-add-modules java.se</jvmFlag>
-                            <jvmFlag>--add-exports java.base/jdk.internal.ref=ALL-UNNAMED</jvmFlag>
-                            <jvmFlag>--add-opens java.base/java.lang=ALL-UNNAMED</jvmFlag>
-                            <jvmFlag>--add-opens java.base/sun.nio.ch=ALL-UNNAMED</jvmFlag>
-                            <jvmFlag>--add-opens java.management/sun.management=ALL-UNNAMED</jvmFlag>
-                            <jvmFlag>--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</jvmFlag>
-                            <jvmFlag>-Dhazelcast.ignoreXxeProtectionFailures=true</jvmFlag>
-                        </jvmFlags>
                     </container>
                     <pluginExtensions>
                         <pluginExtension>
